# storage/api-docs/api-docs.json
@@ -125,7 +125,7 @@
                 "tags": [
                     "Categories"
                 ],
-                "description": "Creates a new category and returns it, needs authentication",
+                "description": "Creates a new category and returns it, needs admin authorization",
                 "operationId": "createCategory",
                 "requestBody": {
                     "required": true,
@@ -155,11 +155,14 @@
                     "201": {
                         "description": "Successfully created category"
                     },
+                    "422": {
+                        "description": "Bad request"
+                    },
                     "401": {
                         "description": "Unauthorized"
                     },
-                    "422": {
-                        "description": "Bad request"
+                    "403": {
+                        "description": "Unauthorized for non admins"
                     }
                 },
                 "security": [
@@ -200,7 +203,7 @@
                 "tags": [
                     "Categories"
                 ],
-                "description": "Updates a category and returns it, needs authentication",
+                "description": "Updates a category and returns it, needs admin authorization",
                 "operationId": "updateCategory",
                 "parameters": [
                     {
@@ -240,11 +243,14 @@
                     "404": {
                         "description": "Category not found"
                     },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
                     "422": {
                         "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Unauthorized for non admins"
                     }
                 },
                 "security": [
@@ -257,7 +263,7 @@
                 "tags": [
                     "Categories"
                 ],
-                "description": "Deletes a category, needs authentication",
+                "description": "Deletes a category, needs admin authorization",
                 "operationId": "deleteCategory",
                 "parameters": [
                     {
@@ -278,7 +284,10 @@
                         "description": "Category not found"
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Unauthorized for non admins"
                     }
                 },
                 "security": [
@@ -340,7 +349,7 @@
                         "description": "Successfully created order"
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthenticated"
                     },
                     "422": {
                         "description": "Bad request"
@@ -370,7 +379,7 @@
                 "tags": [
                     "Products"
                 ],
-                "description": "Creates a new product and returns it, needs authentication",
+                "description": "Creates a new product and returns it, needs admin authorization",
                 "operationId": "createProduct",
                 "requestBody": {
                     "required": true,
@@ -422,11 +431,14 @@
                     "201": {
                         "description": "Successfully created category"
                     },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
                     "422": {
                         "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Unauthorized for non admins"
                     }
                 },
                 "security": [
@@ -467,7 +479,7 @@
                 "tags": [
                     "Products"
                 ],
-                "description": "Updates a product and returns it, needs authentication",
+                "description": "Updates a product and returns it, needs admin authorization",
                 "operationId": "updateProduct",
                 "parameters": [
                     {
@@ -526,10 +538,13 @@
                         "description": "Product not found"
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthenticated"
                     },
                     "422": {
                         "description": "Bad request"
+                    },
+                    "403": {
+                        "description": "Unauthorized for non admins"
                     }
                 },
                 "security": [
@@ -542,7 +557,7 @@
                 "tags": [
                     "Products"
                 ],
-                "description": "Deletes a product, needs authentication",
+                "description": "Deletes a product, needs admin authorization",
                 "operationId": "deleteProduct",
                 "parameters": [
                     {
@@ -563,7 +578,10 @@
                         "description": "Product not found"
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Unauthorized for non admins"
                     }
                 },
                 "security": [
